# mcp-docling

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
