[project]
name = "mcp-server-lls"
version = "0.1.0"
description = "A simple MCP server exposing a website fetching tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Red Hat Gmbh" }]
maintainers = [
    { name = "Adel Zaalouk", email = "azaalouk@redhat.com" },
]
keywords = ["mcp", "llm", "automation", "document", "processing"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "anyio>=4.5", 
    "click>=8.1.0", 
    "httpx>=0.27", 
    "mcp",
    "docling"
]

[project.scripts]
mcp-server-lls = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pyright]
include = ["."]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]

